# whisper

./: .gitignore  README.md  SETUP.md  TESTING.md  config.example.json  main.py  pyproject.toml  requirements.txt  test-desktop-app.sh
app/: __init__.py  audio.py  config.py  feedback.py  hotkeys.py  main.py  output.py  transcriber.py  ui.py
desktop-app/: main.js  package.json
desktop-app/renderer/: index.html
examples/: web-example.html
scripts/manual/: README.md  run_output_manual.py
stt-library/: README.md  package.json
stt-library/src/: browser-stt.js  grammar-cleanup.js  index.js  whisper-api.js
tests/: test_config.py  test_output.py  test_transcriber.py
whisper-service/: .env.example  requirements.txt  whisper_server.py
