[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-flow"
version = "0.1.0"
description = "Desktop assistant for Whisper-based voice typing"
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
full = [
    "openai-whisper>=20231117",
    "numpy>=1.21",
    "sounddevice>=0.4",
    "keyboard>=0.13",
    "mouse>=0.7",
    "pystray>=0.19",
    "Pillow>=9.0",
    "pyautogui>=0.9",
    "pyperclip>=1.8",
    "plyer>=2.1",
]

develop = [
    "pytest>=7.4",
    "numpy>=1.21",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
